--- a/public/index.html
+++ b/public/index.html
@@ -3,44 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Juego PPT - Alejandro</title>
+    <title>Generate Random Excuse</title>
     <link rel="stylesheet" href="./style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-    <div class="container">
-        <div class="you">
-            <h2 class="you-title">Tu elección</h2>
-            <select name="select" id="select">
-                <option value="0">🪨</option>
-                <option value="1">🧻</option>
-                <option value="2">✂️</option>
-            </select>
-        </div>
-
-        <div class="opponent">
-            <h2 class="opponent-title">Oponente</h2>
-            <div class="slider">
-                <ul id="choose">
-                    <li><img src="https://em-content.zobj.net/source/apple/271/rock_1faa8.png" alt="stone"></li>
-                    <li><img src="https://em-content.zobj.net/source/apple/325/roll-of-paper_1f9fb.png" alt="paper"></li>
-                    <li><img src="https://em-content.zobj.net/source/apple/118/black-scissors_2702.png" alt="scissors"></li>
-                </ul>
-                <div class="result">
-                    <img src="https://em-content.zobj.net/source/apple/271/rock_1faa8.png" alt="stone" id="stone">
-                    <img src="https://em-content.zobj.net/source/apple/325/roll-of-paper_1f9fb.png" alt="paper" id="paper">
-                    <img src="https://em-content.zobj.net/source/apple/118/black-scissors_2702.png" alt="scissors" id="scissors">
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <p id="message"></p>
-
-    <div class="fight-container">
-        <button id="fight" onclick="game()">Luchar</button>
-        <button id="reset" onclick="reload()">Reset</button>
-    </div>
-
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="./apps.js"></script>
 </body>
 </html>
