--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Generate Random Excuse</title>
+    <title>Generate Random Password</title>
     <link rel="stylesheet" href="./style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" rel="stylesheet">
@@ -15,7 +15,7 @@
             <hr>
         </div>
 
-        <form action="#" method="get" class="row g-3 p-2">
+        <form action="#" method="get" class="row g-3 p-2" onsubmit="return false;">
             <div class="form-outline col-6">
                 <label class="form-label" for="typeNumber">Choose character length</label>
                 <input type="number" id="typeNumber" class="form-control" min="8" max="20" required/>
@@ -51,10 +51,11 @@
                     <span class="input-group-text me-2 border rounded-end d-none" onclick="hiddenPassword()" id="hiddenPassword">
                         <i class="fa-regular fa-eye-slash"></i>
                     </span>
-                    <button class="btn btn-primary me-2 border rounded" onclick="copyText()" type="button">
+                    <button class="btn btn-primary me-2 border rounded btn-container-messageCopy" onclick="copyText()" type="button">
+                        <span class="messageCopy" id="messageCopy">Copy</span>
                         <i class="fa-regular fa-copy"></i>
                     </button>
-                    <button class="btn btn-secondary border rounded" type="submit" onclick="generateRandomPassword()">
+                    <button class="btn btn-secondary border rounded" type="button" onclick="generateRandomPassword()">
                         <i class="fa-solid fa-arrows-rotate"></i>
                     </button>
                 </div>
